Fixed Dark Mode Button / Easter Egg Group 4
Botão de mudança de tema agora altera também o seu texto, posicionamento para o canto superior direito da section do html, e implementação de easter eggs para os membros do grupo quando o site está em dark mode

--- a/Trabalho-Final-Frontend-Cooperativa-Amazonas/style.css
+++ b/Trabalho-Final-Frontend-Cooperativa-Amazonas/style.css
@@ -6,13 +6,14 @@
 }
 
 :root {
-    --primary-color: hsl(275, 96%, 22%);
-    --secondary-color: hsl(275, 62%, 59%);
+    --hue: 275;
+    --primary-color: hsl(var(--hue), 96%, 22%);
+    --secondary-color: hsl(var(--hue), 62%, 59%);
     --dark-theme: hsl(0, 0%, 11%);
     --dark-theme-secondary: rgb(58, 57, 57);
 
      
-    --cardElements: #DFDFDF;
+    --cardElements: hsl(0, 0%, 87%);
    
 
 
@@ -29,7 +30,7 @@ body {
 .background-navbar {
     height: var(--nav-height);
     background-color: var(--primary-color);
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
 
 }
 
@@ -121,9 +122,28 @@ p {
 }
 
 .devProfiles {
+    position: relative;
+    max-width: 100%;
     width: 15rem;
     height: 15rem;
+    margin-bottom: 1rem;
+}
 
+.turmaArrepio img.image-hover{
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 15rem;
+    bottom: 0;
+    object-fit: contain;
+    opacity: 0;
+    transition: opacity .2s;
+    width: 18rem;
+    
+}
+
+.dark .turmaArrepio:hover img.image-hover {
+    opacity: 1;
 }
 
 #cardsGrupo4 div:nth-child(2) .devProfiles {
@@ -200,21 +220,24 @@ footer {
 .tema button {
     
     font-size: 2rem;
-    
+    margin-right: 1rem;
     padding: 1rem 2rem;
     background: var(--primary-color);
     color: white;
     border-radius: 10rem;
     border: none;
+    float: right;
     
+}
+
+.tema button:hover {
+    background: var(--secondary-color);
 }
 
 .dark button {
     background: var(--dark-theme);
     border: 1px solid white;
 }
-
-
 
 .dark button:hover{
     background: var(--dark-theme-secondary);
